# rip

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench.ps1
python/rip/: __init__.py  __main__.py
src/: main.rs  platform.rs  progress.rs  ui.rs
tests/: long_path.rs  reparse_safety.rs
