[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rip"
version = "0.1.0"
description = "Rip through directories and delete them as fast as possible"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
module-name = "rip"
python-source = "python"
strip = true
